--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
       <!-- Contenido dinámico -->
       <div class="etapas-contenido">
         <div class="etapa-item pensionado">
-          <img src="/img/banner1.jpg" alt="Pensionado">
+          <img src="img/banner1.jpg" alt="Pensionado">
           <a href="#" class="btn-ver">Conoce más</a>
         </div>
         <div class="etapa-item joven">
@@ -458,7 +458,7 @@
 
     <div class="slide s3">
       <div class="promo-content">
-        <h2>Expomóvil Banreservas</h2>
+        <h2>Expomóvil Santana</h2>
         <p>Las mejores oportunidades para tu vehículo nuevo.</p>
         <a href="#" class="btn-promo">CONOCE MÁS</a>
       </div>
@@ -568,7 +568,7 @@
     <div class="col-md-6 d-flex align-items-center">
       <div class="p-4">
         <h4 class="fw-bold">Hay muchas maneras de acceder a tus productos</h4>
-        <p class="text-muted">Con nuestros Canales puedes realizar tus transacciones, solicitudes de productos y servicios de forma fácil y rápida, desde cualquier lugar y dispositivo.</p>
+        <p class="text-muted">Con nuestros Canales Santana puedes realizar tus transacciones, solicitudes de productos y servicios de forma fácil y rápida, desde cualquier lugar y dispositivo.</p>
         <a href="#" class="btn btn-outline-warning btn-sm fw-bold">CONTÁCTANOS</a>
       </div>
     </div>
@@ -588,7 +588,7 @@
           <div class="press-card">
             <img src="img/sala1.jpg" class="img-fluid mb-2" alt="">
             <h6 class="mb-1">Beneficiarios del programa</h6>
-            <p class="small text-muted">Resumen breve de la noticia.</p>
+            <p class="small text-muted">pautas.</p>
           </div>
         </div>
 
@@ -596,7 +596,7 @@
           <div class="press-card">
             <img src="img/sala2.jpg" class="img-fluid mb-2" alt="">
             <h6 class="mb-1">Iniciativa social</h6>
-            <p class="small text-muted">Resumen breve de la noticia.</p>
+            <p class="small text-muted">dirige.</p>
           </div>
         </div>
 
@@ -604,7 +604,7 @@
           <div class="press-card">
             <img src="img/sala3.jpg" class="img-fluid mb-2" alt="">
             <h6 class="mb-1">Alianzas estratégicas</h6>
-            <p class="small text-muted">Resumen breve de la noticia.</p>
+            <p class="small text-muted">logralo.</p>
           </div>
         </div>
       </div>
@@ -621,7 +621,7 @@
       <div class="row gy-4">
         <div class="col-md-4">
           <img src="img/logos.png" alt="logo" class="img-fluid" style="max-width:170px;">
-          <p class="small">Breve descripción institucional del banco. Reemplaza con contenido autorizado.</p>
+          <p class="small">Santana te cambia la vida. Date la oportunidad.</p>
         </div>
 
         <div class="col-6 col-md-2">
@@ -645,7 +645,7 @@
         <div class="col-md-4">
           <h6>Contacto</h6>
           <p class="small mb-1">Tel: +1 (809) 000-0000</p>
-          <p class="small mb-1">Email: contacto@ejemplo.com</p>
+          <p class="small mb-1">Email: santana@hotmail.com</p>
           <div class="mt-2">
             <a class="btn btn-sm btn-outline-light me-1" href="#"><i class="bi bi-facebook"></i></a>
             <a class="btn btn-sm btn-outline-light me-1" href="#"><i class="bi bi-twitter"></i></a>
@@ -656,7 +656,7 @@
 
       <hr style="border-color: rgba(255,255,255,0.06); margin-top:28px;">
       <div class="d-flex justify-content-between align-items-center small legal">
-        <div>© <span id="year"></span> Banco Ejemplo. Todos los derechos reservados.</div>
+        <div>© <span id="year"></span> Banco Santana. Todos los derechos reservados.</div>
         <div><a href="#">Términos</a> · <a href="#">Privacidad</a></div>
       </div>
     </div>
